# multi-codec

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  table.csv
.github/workflows/: rust.yml
benches/: codec_bench.rs
examples/: uvi.rs
src/: codec.rs  error.rs  lib.rs  table_gen.rs  types.rs
src/serde/: de.rs  mod.rs  ser.rs
tests/: edge_case_tests.rs  error_tests.rs  integration_tests.rs  proptest_tests.rs  security_tests.rs
